# creator-scout

./: .dockerignore  .env.example  .gitignore  .semgrepignore  AGENTS.md  CLAUDE.md  DESIGN_SYSTEM.md  Dockerfile.api  Dockerfile.worker  README.md  creator-scout-product-prd.md  creator-scout-technical-spec.md  implementation_plan.md  pyproject.toml  task.md
.gemini/: ui-skills.md
apps/api/: graph_routes.py  main.py  server.py
apps/web/: README.md  next.config.ts  package.json
creator_scout/: __init__.py  config.py
creator_scout/billing/: __init__.py  provider.py  service.py
creator_scout/brand/: __init__.py  brief.py  crawler.py  models.py  scan.py  service.py
creator_scout/campaign/: __init__.py  create.py  service.py
creator_scout/discovery/: __init__.py  auth.py  compliance.py  http.py  ingest.py  ingest_query.py  (+12 more)
data/: seed_creators.json  seed_queries.json  setup_postgres_schema.sql
docs/: current_state_and_gaps.md  insforge_audit.md  insforge_branch_verification_2026-06-07.md  insforge_live_audit_2026-06-07.md  product_roadmap.md
migrations/: 20260607120000_backend-hardening.sql  20260607121000_creator-account-count-bigints.sql  20260607130000_autosend-outreach.sql  20260610150000_dodo-billing.sql  20260614084300_realtime-channels.sql  20260614130000_user-oauth-connections.sql  20260614200000_user-oauth-connections-fk.sql
tests/: test_billing.py  test_brand_scan.py  test_campaign_orchestrator.py  test_discovery.py  test_graph_nodes.py  test_graph_runner.py  test_ingestion_adapters.py  test_outreach.py  test_search_adapters.py  test_verifier.py
(+32 files in other folders)
