[project]
name = "creator-scout"
version = "0.1.0"
description = "Creator Scout first-party discovery engine and API scaffold"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "langgraph>=0.2.0",
    "langgraph-checkpoint-postgres>=0.1.0",
    "asyncpg>=0.29.0",
    "psycopg[binary]>=3.1.0",
    "sse-starlette>=2.1.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

